<resources>
    <string name="app_name">Hungrezy</string>
    <string name="kitchenCompleteAll">Complete all</string>
    <string name="orderTotalPrice">Total: </string>
    <string name="orderButton">ORDER</string>
    <string name="payButton">BILL</string>
    <string name="logoutDialogTitle">WANT TO LOG OUT?</string>
    <string name="logoutDialogContent">This will automatically log you out of your account</string>
    <string name="logoutButton">LOG OUT</string>
    <string name="editDialogTitle">EDIT ITEM:</string>
    <string name="clientQtyChooseLabel">Choose Quantity:</string>
    <string name="specialReqsLabel">Special Requirements:</string>
    <string name="specialReqsHint">e.g. without cheese</string>
    <string name="deleteItemLabel">Delete Item:</string>
    <string name="cancelButton">CANCEL</string>
    <string name="saveButton">SAVE</string>
    <string name="helpDialogTitle">Need help?</string>
    <string name="helpDialogContent">If you need any information regarding the menu or help with the app please feel free to call one of our waiters using the button below</string>
    <string name="callWaiterButton">CALL WAITER</string>
    <string name="shoppingCartTitle">Cart</string>
    <string name="noReqs">No special requirements</string>
    <string name="addToCartButton">ADD TO CART</string>
    <string name="signup_name_hint">Name</string>
    <string name="signup_email_hint">Email</string>
    <string name="signup_adress_hint">Adress</string>
    <string name="signup_phone_hint">Phone Number</string>
    <string name="signup_password_hint">Password</string>
    <string name="signup_repassword_hint">Re-enter Password</string>
    <string name="create_account_button">Create Account</string>
    <string name="already_member_login_button">Already a member? Login</string>
    <string name="scan_qr_code_hint">Scan QR Code</string>
    <string name="login_button">LOGIN</string>
    <string name="no_account_button">No account yet? Create one</string>
    <string name="total_price">Total price: </string>
</resources>
