<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            android:text="@string/helpDialogTitle"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/helpDialogContent"
            android:layout_marginBottom="16dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/callWaiterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/callWaiterButton"
                android:background="@android:color/transparent"
                android:textColor="@color/colorPrimary"
                android:layout_alignParentRight="true"/>

            <Button
                android:id="@+id/cancelHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/cancelButton"
                android:background="@android:color/transparent"
                android:textColor="@color/colorPrimary"
                android:layout_toLeftOf="@id/callWaiterButton"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>